# FinAI

./: .env.example  .gitignore  README.md  function_desin.md  pyproject.toml  requirements.txt
.claude/: settings.json
finai/: __init__.py  cli.py  config.py  db.py  models.py
finai/api/: __init__.py  server.py
finai/llm/: __init__.py  attribution.py  client.py  narrative.py  prompts.py
finai/pipeline/: __init__.py  etl.py  scheduler.py
finai/quant/: __init__.py  analyze_builder.py  base.py  loader.py  registry.py  runner.py  synthesis.py
finai/quant/methods/: __init__.py  arima_method.py  garch_method.py  institutional.py  mc_var.py  momentum.py  quantile.py  technical.py
finai/quant/templates/: analyze.html.j2
finai/report/: __init__.py  builder.py
finai/report/templates/: daily.html.j2
finai/signals/: __init__.py  anomaly.py  cross_market.py  global_macro.py  market.py  sector.py  similarity.py
tests/: conftest.py  test_global_source.py  test_llm.py  test_pipeline.py  test_quant.py  test_signals.py
