[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finai"
version = "0.1.0"
description = "FinAI - daily Chinese A-share market analysis tool"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "akshare>=1.12",
  "pandas>=2.1",
  "numpy>=1.26",
  "sqlalchemy>=2.0",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "anthropic>=0.40",
  "apscheduler>=3.10",
  "click>=8.1",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "statsmodels>=0.14",
  "arch>=6.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "ruff>=0.5"]

[project.scripts]
finai = "finai.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["finai*"]

[tool.setuptools.package-data]
"finai.report" = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
